--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -82,6 +82,10 @@
   clear: both;
 }
 
+.margin-left {
+  margin-left: 5px;
+}
+
 .margin-right {
   margin-right: 5px;
 }
@@ -104,6 +108,11 @@
 
 .outline-border {
   border: 1px solid #dcdee2;
+}
+
+
+.margin-left-10 {
+  margin-left: 10px;
 }
 
 .margin-right-10 {
